deployments/sleep-queue/sleep-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalability-tester-backend-sleep
  namespace: monitoring
spec:
  # replica count could be maintained by HPA
  #replicas: 1
  selector:
    matchLabels:
      app: scalability-tester-backend-sleep
  template:
    metadata:
      labels:
        app: scalability-tester-backend-sleep
    spec:
      containers:
      - name: scalability-tester-backend-sleep
        imagePullPolicy: Always
        image: intel/k8s-device-scalability-tester:latest
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsUser: 65534
          runAsGroup: 65534
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: [ "ALL" ]
        # to identify backend node/pod
        command: [
          "/tester-backend",
          "-faddr", "scalability-tester-frontend.monitoring:9999",
          "-backoff", "0.2",
          "-backoff-max", "1.0",
          "-limit", "12",
          "-name", "sleep",
          "-node-env", "NODE_NAME",
          "-pod-env", "POD_NAME",
          "--",
          "sleep"
        ]
      # how long pod termination (e.g. on scale-down) can take before
      # it's forced (= request failure), should be larger than backend
      # request timeout "-limit" value (as long as that's reasonable)
      terminationGracePeriodSeconds: 15
